--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,7 @@ services:
       start_period: 60s
 
   flaskapp:
-    build:
-      context: .
+    build: .
     container_name: flask-app
     ports:
       - 5000:5000
