--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,8 @@ services:
       start_period: 60s
 
   flaskapp:
-    build: .
+    build: 
+      context: .
     container_name: flask-app
     ports:
       - 5000:5000
@@ -44,3 +45,5 @@ services:
 
 networks:
   twotier:
+volumes:
+  mysql-data:
